# news_search_app

./: .coverage  .env  .env.example  .gitignore  Dockerfile  README.md  app.py  controllers.py  database.db  docker-compose.yml  init_database.py  models.py  pyproject.toml  requirements.txt  setup - Copy.ps1  site_settings.json  test_all.py  test_extension_gui.py  test_ollama_agent.py
controllers/: __init__.py  search_bp.py  settings_bp.py
instance/: news_app.db  test_old.db
scripts/: run_gradio.py  seed.py
src/news_app/: app.py
src/news_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/news_app/ml/: recommender.py
src/news_app/models/: __init__.py  article.py  preference.py  report.py  user.py
src/news_app/routes/: api.py  auth.py  news.py
src/news_app/services/: analytics.py  news_service.py  ollama_client.py  report_service.py
src/news_app/static/css/: style.css
src/news_app/static/js/: main.js
src/news_app/templates/: base.html
src/news_app/templates/auth/: login.html  profile.html  register.html
src/news_app/templates/dashboard/: index.html
src/news_app/templates/errors/: 404.html  500.html
src/news_app/templates/news/: article.html  reading_list.html  search.html
static/js/: search.js  settings.js
templates/: index.html  login.html  ollama_config.html  report.html  search.html  search_result.html  search_results.html  settings.html  site_settings.html
tests/: conftest.py  test_auth.py  test_news.py  test_personalization.py  test_reports.py
utils/: auth.py  config.py  news_fetcher.py  ollama_service.py  site_settings.py
(+3 files in other folders)
