[project]
name = "news-app"
version = "0.1.0"
description = "Intelligent news search, personalized reading, and report generation with AI"
requires-python = ">=3.11"
authors = [
    {name = "Dev Team"},
]
dependencies = [
    "flask>=3.0",
    "flask-login>=0.6",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "flask-wtf>=1.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "gradio>=4.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "gunicorn>=22.0",
    "bcrypt>=4.1",
    "markdown>=3.5",
    "html2text>=2024.2",
    "bleach>=6.1",
    "redis>=5.0",
    "celery>=5.3",
    "email-validator>=2.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "pytest-mock>=3.12",
    "bandit>=1.7",
    "ruff>=0.3",
    "mypy>=1.8",
    "coverage>=7.4",
]

[project.urls]
homepage = "https://github.com/example/news-app"
repository = "https://github.com/example/news-app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["news_app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
